<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:visibility="visible"
        android:animateLayoutChanges="true"
>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="#000000"
            android:text="@string/reset_password_title"
            style="@style/TextAppearance.CustomFontBold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="35dp"
    />


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_verification_code"
            style="@style/AppEditTextSectionTitle"/>

    <EditText
            android:id="@+id/edt_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/verification_code"
            android:inputType="text"
            style="@style/AppEditText"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute"/>

    <requestFocus/>


    <include layout="@layout/view_new_confirm_password"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            style="@style/AppGreenButtonRoundedCorner"
            android:id="@+id/tv_reset_pwd"


    />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="15dp"
    >

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/did_not_receive_code"
                android:textColor="@color/black"
                android:textSize="14sp"
                style="@style/TextAppearance.CustomFontRegular"/>

        <TextView
                android:id="@+id/tv_resend_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:paddingBottom="@dimen/margin_6dp"
                android:paddingLeft="@dimen/margin_mini"
                android:paddingRight="@dimen/margin_medium"
                android:paddingTop="@dimen/margin_6dp"
                android:text="@string/resend_code"
                android:textAppearance="@style/TextAppearance.CustomFontBold"
                android:textColor="@color/theme_green"
                android:textSize="12sp" android:paddingStart="@dimen/margin_mini"
                android:paddingEnd="@dimen/margin_medium"/>
    </LinearLayout>


    <Space android:layout_width="match_parent" android:layout_height="40dp"/>


</LinearLayout>