<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:visibility="visible"
        android:animateLayoutChanges="true"
>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="#000000"
            android:text="@string/forgot_password"
            style="@style/TextAppearance.CustomFontBold"
            android:layout_gravity="center_horizontal"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#2f2f2f"
            android:letterSpacing="0.02"
            android:gravity="center_horizontal"
            android:text="@string/enter_your_email_below_to_reset_your_password"
            android:layout_marginTop="10dp"
            style="@style/TextAppearance.CustomFontRegular"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="29dp"
            tools:ignore="UnusedAttribute"/>

    <include layout="@layout/view_email"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_verification_email"
            style="@style/AppGreenButtonRoundedCorner"
            android:id="@+id/tv_sent_verification_mail"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#53910c"
            android:gravity="center_horizontal"
            android:text="@string/back_to_sign_in"
            android:layout_marginTop="37dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_back_to_sign_in"

    />

    <Space android:layout_width="match_parent" android:layout_height="50dp"/>


</LinearLayout>