<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">


    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_success"
            android:layout_marginTop="65dp" tools:ignore="ContentDescription"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:text="@string/congratulations"
            android:layout_marginTop="17dp"
            style="@style/TextAppearance.CustomFontBold"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#2f2f2f"
            android:letterSpacing="0.02"
            android:gravity="center_horizontal"
            android:text="@string/your_password_has_been_reset_successfully"
            android:layout_marginTop="10dp"

            tools:ignore="UnusedAttribute"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            style="@style/AppGreenButtonRoundedCorner"
            android:id="@+id/tv_back_to_login"
    />


    <Space android:layout_width="match_parent" android:layout_height="150dp"/>

</LinearLayout>