<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:visibility="visible"
        android:gravity="center_horizontal"
        android:padding="50dp"
        android:background="@color/white"
        android:id="@+id/ll_change_pwd_confirmation"
>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17.3sp"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:text="@string/congratulations"
            style="@style/TextAppearance.CustomFontBold"
            android:drawableTop="@drawable/ic_success"
            android:drawablePadding="12dp"
            android:layout_marginTop="100dp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#2f2f2f"
            android:letterSpacing="0.02"
            android:gravity="center_horizontal"
            android:text="@string/your_password_has_been_change_successfully"
            style="@style/TextAppearance.CustomFontRegular"
            android:layout_marginTop="11dp"
            tools:ignore="UnusedAttribute"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back"
            style="@style/AppGreenButtonRoundedCorner"
            android:id="@+id/tv_back_to_login"
    />


</LinearLayout>